--- a/cards/client/index.html
+++ b/cards/client/index.html
@@ -1,100 +1,54 @@
 <!doctype html>
-
 <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
-<title>Deck of Cards ide</title>
+<title>Cards Editor</title>
 
 <head>
 <!-- //TEMPORARY: just to aid in development workflow -->
 <!-- <meta http-equiv="refresh" content="5; URL=http://localhost:8080"> -->
-<!--        SOURCES         -->
-<!-- Codemirror -->
-    <!-- styles -->
+<!-- CSS -->
+<link rel=stylesheet href="cm/docs.css">
+<link rel=stylesheet href="cm/codemirror.css">
+<link rel=stylesheet href="cm/addons/fullscreen/fullscreen.css">
+<link rel=stylesheet href="cm/one-dark.css">
+<link rel=stylesheet href="css/jquery-ui.css">
+<link rel=stylesheet href="css/alicenode.css">
+<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+<link rel=stylesheet href="css/cards.css">
+<link rel=stylesheet href="css/colresizeable.css">
 
-    <link rel=stylesheet href="cm/docs.css">
-    <link rel=stylesheet href="cm/codemirror.css">
-    <link rel=stylesheet href="cm/addons/fullscreen/fullscreen.css">
-    <link rel=stylesheet href="cm/one-dark.css">
-
-    <!-- <link rel=stylesheet href="cm/merge.css">
-    <link rel=stylesheet href="cm/icecoder.css"> -->
-
-    <!-- scripts -->
-    <script src="cm/codemirror.js"></script>
-    <script src="cm/css.js"></script>
-    <!-- load local server version if cdn unavailable -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/diff_match_patch/20121119/diff_match_patch.js"></script><script>if (!window.jQuery) document.write('<script src="cm/diff_match_patch.js"><\/script>');</script>
-
-    <!-- <script src="cm/htmlmixed.js"></script> -->
-    <!-- <script src="cm/xml.js"></script> -->
-    <!-- <script src="cm/merge.js"></script> -->
-    <!-- <script src="cm/modes/javascript.js"></script> -->
-    <script src="cm/modes/clike.js"></script>
-    <script src="cm/modes/glsl.js"></script>
-      <script src="cm/addons/buttons/buttons.js"></script>
-  <script src="cm/addons/panel.js"></script>
-  <script src="cm/addons/fullscreen/fullscreen.js"></script>
-  <script src="cm/cm-resize.js"></script>
-  <script src="cm/autorefresh.js"></script>
-
-
-
-
-
-
-
-
-
-
-<!-- General Sources -->
-    <!-- style -->
-    <link rel=stylesheet href="css/jquery-ui.css">
-    <link rel=stylesheet href="css/alicenode.css">
-    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-
-    <link rel=stylesheet href="css/cards.css">
-
-
-
-    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-
-    <!-- resizeable columns -->
-    <link rel=stylesheet href="css/colresizeable.css">
-
-    <script src="js/colResizable-1.5.min.js"></script>
-
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/diff_match_patch/20121119/diff_match_patch.js"></script>
-    <script>if (!window.jQuery) document.write('<script src="cm/diff_match_patch.js"><\/script>');</script>
-
-    <script src="http://d3js.org/d3.v3.min.js"></script>
-
-    <!-- server address & open/close -->
-
+<!-- JS -->
+<script src="cm/codemirror.js"></script>
+<script src="cm/css.js"></script>
+<script src="cm/modes/clike.js"></script>
+<script src="cm/modes/glsl.js"></script>
+<script src="cm/addons/buttons/buttons.js"></script>
+<script src="cm/addons/panel.js"></script>
+<script src="cm/addons/fullscreen/fullscreen.js"></script>
+<script src="cm/cm-resize.js"></script>
+<script src="cm/autorefresh.js"></script>
+<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+<script src="js/colResizable-1.5.min.js"></script>
+<script src="http://d3js.org/d3.v3.min.js"></script>
 </head>
 
 <style>
-
  .node circle {
    fill: #fff;
    stroke: rgb(7, 10, 192);
    stroke-width: 3px;
  }
-
  .node text { font: 12px sans-serif; }
-
  .link {
    fill: none;
    stroke: #ccc;
    stroke-width: 4px;
    cursor: crosshair;
  }
-
   .node {
       /* allow for mouse interaction on the nodes */
   cursor: pointer; 
  }
-
 </style>
 
 <!-- Important: must have a body section so that the 'double click = new card' UI works -->
