--- a/client/state.html
+++ b/client/state.html
@@ -197,6 +197,8 @@ function openSocket() {
     ws = new WebSocket(ws_url);
     ws.binaryType = 'arraybuffer';
     ws.onopen = function() {
+        // tell the server to send the most-recent state
+        ws.send("stateEditorConnect?")
         // log('open');  
         // ws.send("client_SVG?")
 
@@ -295,6 +297,7 @@ function openSocket() {
                     break;
                     
                     case "state":
+                    console.log("state " + arg)
                     //we need to clear the table rows (except for the first, since [1]in order to add after last we need something there already, annnnd the 0th table row is our table header!)
                     $("#stateValues").find("tr:gt(0)").remove(); 
                     
