Readded search and everything should be merge and proper now - Alexander

--- a/client/index.html
+++ b/client/index.html
@@ -217,14 +217,16 @@
     <tr>
         <th style="background-color:rgb(255, 150, 243); font-size: 14px; text-decoration: none; text-align: center;">
             <b>Branches</b>
-            <input type="text" id="search" onkeyup="hideAndSeek();" placeholder="Search...">
+            <input type="text" id="search1" onkeyup='hideAndSeek("chooseBranch","search1");' placeholder="Search...">
             <button onclick="clientNewBranch()" id="newBranch">New Branch</button>
         </th>
         <th style="background-color:rgb(255, 150, 243); font-size: 14px; text-decoration: none; text-align: center;">
             <b>Files within Selected Branch</b>
+            <input type="text" id="search2" onkeyup='hideAndSeek("openFileName", "search2");' placeholder="Search...">
         </th>
         <th style="background-color:rgb(255, 150, 243); font-size: 14px; text-decoration: none; text-align: center;">
-            <p id="fileInCommit"><p>          
+            <p id="fileInCommit"><p>    
+            <input type="text" id="search3" onkeyup='hideAndSeek("selectCommit", "search3");' placeholder="Search...">      
         </th>
     </tr>
     <tr> 
@@ -1052,25 +1054,22 @@ function mouseLeaveCommit (evt) {
   evt.target.setAttributeNS(null, 'opacity', '1')
 }
 
-function hideAndSeek () {
+function hideAndSeek(mainTag, search) {
   // Declare variables
   var input, filter, table, tr, td, i
-  input = document.getElementById('search')
+  input = document.getElementById(search)
   filter = input.value.toUpperCase()
-  table = document.getElementById('myTable')
-  tr = table.getElementsByTagName('tr')
+  div = document.getElementById(mainTag);
 
   // Loop through all table rows, and hide those who don't match the search query
-  for (i = 0; i < tr.length; i++) {
-    td = tr[i].getElementsByTagName('td')[0]
-    if (td) {
-      if (td.innerHTML.toUpperCase().indexOf(filter) > -1) {
-        tr[i].style.display = ''
-      } else {
-        tr[i].style.display = 'none'
-      }
+  a = div.getElementsByTagName("option");
+  for (i = 0; i < a.length; i++) {
+    if (a[i].innerHTML.toUpperCase().indexOf(filter) > -1) {
+      a[i].style.display = "";
+    } else {
+      a[i].style.display = "none";
+     }
     }
-  }
 }
 
 
