Testing to make sure commiting works - Alexander

--- a/client/index.html
+++ b/client/index.html
@@ -212,7 +212,7 @@
         </th>
     </tr>    
 </table>
-<!-- git repo navigation -->
+<!-- git repo navigation area -->
 <table style="background-color: blue" width=100% id="gitSelector">  
     <tr>
         <th style="background-color:rgb(255, 150, 243); font-size: 14px; text-decoration: none; text-align: center;">
