--- a/client/index.html
+++ b/client/index.html
@@ -313,23 +313,23 @@ var ws_url = 'ws://localhost:8080'
 
 // var col;
 // codemirror/mergeview globals:
-var value = 'This editor affects the simulation'
+var value = 'This editor affects the simulation';
 
-var orig1 = 'This editor pulls code in from other commits/branches'
-var dv
-let panes = 2
-let highlight = true
-// connect = "align";
-var target
-var collapse = false
-var requested
-var current
-var isRightDirty = false
-var currentBranch
+var orig1 = 'This editor pulls code in from other commits/branches';
+var dv;
+let panes = 2;
+let highlight = true;
+//let connect = "align";
+var target;
+var collapse = false;
+var requested;
+var current;
+var isRightDirty = false;
+var currentBranch;
 var userlist = [] // list of git authors associated with alicenode_inhabitat (from server)
 var currentUserList = [] // this is a temporary storage location for all available users
 var authorName = 'Guest' // git will make commits under this provided name, will change if client user selects different name
-var authorEmail
+var authorEmail;
 
 // username selection (for git commits)
 function userSelect (selection) {
@@ -382,17 +382,21 @@ function openStateEditor () {
   window.open(document.URL + 'state.html')
 }
 
+function toggleDifferences () {
+  dv.setShowDifferences(highlight = !highlight);
+}
+
 function initUI () {
   if (value == null) return
   var target = document.getElementById('view')
-  target.innerHTML = ''
+  target.innerHTML = '';
   dv = CodeMirror.MergeView(target, {
     // content of the left editor
     value: value,
     // content of the right editor
     origRight: orig1,
     // make 3 editor windows possible (only 2 will load on start by default)
-    origLeft: panes == 3 ? orig1 : null,
+   // origLeft: panes == 3 ? orig1 : null,
     // include line numbers in the left margin
     lineNumbers: true,
     // keep this at 10 or less. if infinite it slows the page down a LOT. this is essentially the size of the buffer beyond what is displayed, and if set to infinite or larger number, enables text searching, but again, page loading is an issue.
@@ -407,7 +411,7 @@ function initUI () {
     // connect: "connect",
     // option to collapse code in either editor that doesn't differ from its left or right counterpart. this is switchable.
     collapseIdentical: collapse
-  })
+  });
 
   // Detect when user first makes a change to the code in the right editor view
   dv.rightOriginal().on('changes', function (dv, changeObj) {
@@ -418,7 +422,7 @@ function initUI () {
       console.log('editedRightCode' + authorName.split(' ').join('_') + '_' + selectedCommit + '_' + new Date().getTime() + ' ' + selectedCommit)
       ws.send('chatMsg?Edited file ' + fileName + ' from commit ' + selectedCommit + '. <TO DO: get the new branch name from server that was created by dirtying the flag, report it in this chat message so we can offer all chat clients the ability to load the changes posted in the chat log!>')
     }
-  })
+  });
 
   var choice = (location.hash && location.hash.slice(1)) ||
                (document.location.search &&
@@ -433,15 +437,6 @@ function initUI () {
     var theme = location.hash.slice(1);
     if (theme) { inputTheme.value = theme; selectTheme(); }
   });
-
-dv.edit.setOption("highlightDifferences", false);
-    dv.right.orig.setOption("highlightDifferences", false);
-
-      dv.edit.setOption("highlightDifferences", true);
-    dv.right.orig.setOption("highlightDifferences", true);
-
-    
-
 }
 
   var inputTheme = document.getElementById("themeSelect");
@@ -452,25 +447,23 @@ dv.edit.setOption("highlightDifferences", false);
     location.hash = "#" + theme;
   }
 
-function toggleDifferences () {
-  dv.setShowDifferences(highlight = !highlight)
-}
+
 // value = "script";
 window.onload = function () {
   value = 'This editor affects the simulation'
   orig1 = 'This editor pulls code in from other commits/branches'
-  initUI()
-  let d = document.createElement('div'); d.style.cssText = 'width: 50px; margin: 7px; height: 14px'; dv.editor().addLineWidget(57, d)
+  initUI();
+  let d = document.createElement("div"); d.style.cssText = "width: 50px; margin: 7px; height: 14px"; dv.editor().addLineWidget(57, d);
 }
 
 function mergeViewHeight (mergeView) {
   function editorHeight (editor) {
-    if (!editor) return 0
-    return editor.getScrollInfo().height
+    if (!editor) return 0;
+    return editor.getScrollInfo().height;
   }
   return Math.max(editorHeight(mergeView.leftOriginal()),
     editorHeight(mergeView.editor()),
-    editorHeight(mergeView.rightOriginal()))
+    editorHeight(mergeView.rightOriginal()));
 }
 
 function resize (mergeView) {
@@ -484,10 +477,10 @@ function resize (mergeView) {
       mergeView.rightOriginal().setSize(null, height)
     }
     var newHeight = mergeViewHeight(mergeView)
-    if (newHeight >= height) break
-    else height = newHeight
+    if (newHeight >= height) break;
+    else height = newHeight;
   }
-  mergeView.wrap.style.height = height + 'px'
+  mergeView.wrap.style.height = height + 'px';
 }
 
 // Send current content within CodeMirror's Left editor to the server (will restart simulation)
@@ -769,13 +762,14 @@ function openSocket () {
             // alert(whatever, but essentially an ok and cancel button)
             // }
             // orig1 = arg + value.replace(/\.\.\//g, "codemirror/").replace("yellow", "orange");
-            orig1 = arg
+           // orig1 = arg;
+            dv.right.orig.setOption("value", arg);
             isRightDirty == false
 
-            initUI()
+            //initUI();
             // make sure that the right code editor dirty flag is reset
 
-            break
+            break;
           case 'updateRepo':
             log('Update Repo Graph')
             break
